fix image white space issue with updated max width

--- a/public/style.css
+++ b/public/style.css
@@ -224,7 +224,7 @@
  
  .project-image-div img {
     display: block;
-    width: 100%;
+    max-width: 100%;
     margin-bottom: 0.5em;
  }
  
@@ -272,7 +272,7 @@
     }
 
     .app-container {
-        max-width: 1440px;
+        /* max-width: 1440px; */
         margin: 0 auto;
     }
 
